# Runaphys

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gcov.sh  sonar-project.properties  test.sh
include/: avalanche.h  checks.h  constants.h  control.h  critical_field.h  dreicer.h  growth_rate.h  hdf5export.h  plasma_structures.h  products.h
src/: CMakeLists.txt  avalanche.cpp  checks.cpp  control.cpp  critical_field.cpp  dreicer.cpp  growth_rate.cpp  hdf5export.cpp
test/: CMakeLists.txt  python_constructor.py  python_test.py  test_reference_values_Runafluid.xlsx  tests.cpp
